# CppVerbalExpressions

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  example.cpp  verbalexpressions.hpp
